2008-11-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage
	-usersSearchAction]): new method, derived from the previous
	version of foldersSearchAction, but that only returns username and
	contact info about matching users.
	([SOGoUserHomePage -foldersSearchAction]): new implementation that
	returns the folders available for subscription of the only user
	passed as parameter.

2008-11-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * UI/Scheduler/UIxComponentEditor.m - _loadAttendees
	We set the name to the rfc822 email address if the
	cn is not available. This avoid NOT showing attendees
	from the Web interface when only the email address
	was specified from the attendee list.

2008-11-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-davCollectionQuery:queryContext]): simplified method by returning
	only the folders with the specified type that are shared by the
	owner of the current user folder. The folder owner is now
	identified correctly with his personal folder principal.
	([SOGoUserFolder -davUserQuery:queryContext]): when an LDAP info
	attribute is available for the user, we return it too.

	* SoObjects/SOGo/LDAPUserManager.m ([LDAPUserManager
	+initialize]): we need to retain the LDAPContactInfoAttribute
	static var, to avoid a zombie.
	([LDAPUserManager -fetchContactsMatching:filter])
	([LDAPUserManager -fetchUsersMatching:filter]): the info attribute
	is returned if the related entry does NOT contain it yet: the test
	was reverted.

2008-11-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Modified the invitation "update" templates
	to display the summar in the email subject.
	* Commented out a premature optimization in
	SOGoAppointmentFolder.m

2008-11-20  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Fixed a crash issue in SOGoCache - we don't
	replaced the cached object.
	* Reworked the freebusy code to ignore c_status